--- a/CampusNexus-NG/src/app/faculty/flogin/flogin.component.html
+++ b/CampusNexus-NG/src/app/faculty/flogin/flogin.component.html
@@ -3,11 +3,11 @@
         <div class="mt-7 bg-white  rounded-xl shadow-lg  border-2 border-indigo-300 w-80">
             <div class="p-4 sm:p-7">
                 <div class="text-center">
-                    <h1 class="block text-2xl font-bold text-gray-800 ">Student Login</h1>
+                    <h1 class="block text-2xl font-bold text-gray-800 ">Faculty Login</h1>
                 </div>
 
                 <div class="mt-5">
-                    <form [formGroup]="studentLogin" (ngSubmit)="onSubmit()">
+                    <form [formGroup]="facultyLogin" (ngSubmit)="onSubmit()">
                         <div class="grid gap-y-4">
                             <div>
                                 <label for="email" class="block text-base font-bold ml-1 mb-2 ">Email
