student dashboard and update student user interface added

--- a/CampusNexus-NG/src/app/layouts/student-layout/student-profile/student-profile.component.html
+++ b/CampusNexus-NG/src/app/layouts/student-layout/student-profile/student-profile.component.html
@@ -1,1 +1,10 @@
-<p>student-profile works!</p>
+<div class="flex h-screen">
+    <!-- Sidebar -->
+    <app-student-sidebar></app-student-sidebar>
+    <!-- Main Content -->
+    <div class="p-6 bg-white">
+        <div>
+            <h1 class="text-3xl font-bold text-gray-800">Welcome to the Dashboard!</h1>
+        </div>
+    </div>
+</div>
